CRUD Categorias pronto

--- a/src/categorias/view/listCategorias.html
+++ b/src/categorias/view/listCategorias.html
@@ -47,6 +47,9 @@
                     Fechar
                 </button>
                 <button type="button" class="botao botao-verde btn-save">
+                    Salvar
+                </button>
+                <button type="button" class="botao botao-verde btn-update">
                     Salvar mudanças
                 </button>
             </div>
@@ -56,5 +59,6 @@
 
 <script src="src/categorias/controller/listCategorias.js"></script>
 <script src="src/categorias/controller/createCategorias.js"></script>
-<script src="src/categorias/controller/newCategorias.js"></script>
-<!-- <script src="src/categorias/controller/viewCategorias.js"></script> -->
+<script src="src/categorias/controller/viewCategorias.js"></script>
+<script src="src/categorias/controller/updateCategorias.js"></script>
+<script src="src/categorias/controller/delCategorias.js"></script>
