--- a/src/categorias/view/formCategorias.html
+++ b/src/categorias/view/formCategorias.html
@@ -1,15 +1,15 @@
 <form id="formCategoria">
     <div class="form-group">
-        <label>Nome da categoria</label>
+        <label for="nome">Nome da categoria</label>
         <input type="text" name="nome" id="nome" class="form-control">
     </div>
     <div class="form-group">
-        <label>Data de Criação</label>
+        <label for="dataagora">Data de Criação</label>
         <input type="datetime" name="dataagora" id="dataagora" readonly class="form-control">
     </div>
-    <div class="form-check-label">
-        <input type="checkbox" class="form-check-input ml-3" checked id="ativo" name="ativo">
-        <label class="form-check-label" for="exampleCheck1">Ativo</label>
+    <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" checked id="ativo" name="ativo">
+        <label class="form-check-label" for="ativo">Ativo</label>
     </div>
     <input type="hidden" name="idcategoria" id="idcategoria">
 </form>
