--- a/src/clientes/view/formClientes.html
+++ b/src/clientes/view/formClientes.html
@@ -1,7 +1,15 @@
-<form id="formCategoria">
+<form id="formCliente">
     <div class="form-group">
         <label for="nome">Nome</label>
         <input type="text" name="nome" id="nome" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="email">E-mail</label>
+        <input type="email" name="email" id="email" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="telefone">Telefone</label>
+        <input type="text" name="telefone" id="telefone" class="form-control">
     </div>
     <div class="form-group">
         <label for="dataagora">Data de criação</label>
@@ -11,5 +19,5 @@
         <input type="checkbox" class="form-check-input" checked id="ativo" name="ativo">
         <label class="form-check-label" for="ativo">Ativo</label>
     </div>
-    <input type="hidden" name="idcategoria" id="idcategoria">
+    <input type="hidden" name="idcliente" id="idcliente">
 </form>
